package knime;

option java_package = "org.knime.python.kernel.proto";
option java_outer_classname = "ProtobufAutocompleteSuggestions";

message AutocompleteSuggestions {
	repeated AutocompleteSuggestion autocompleteSuggestion = 1;
	
	message AutocompleteSuggestion {
		required string name = 1;
		required string type = 2;
		required string doc = 3;
	}
}
