package knime;

option java_package = "org.knime.python.kernel.proto";
option java_outer_classname = "ProtobufSimpleResponse";

message SimpleResponse {
	optional bool boolean = 1;
	optional int32 integer = 2;
	optional double double = 3;
	optional string string = 4;
}
