package knime;

option java_package = "org.knime.python.kernel.proto";
option java_outer_classname = "ProtobufVariableList";

message VariableList {
	repeated Variable variable = 1;
	
	message Variable {
		required string key = 1;
		required string type = 2;
		required string value = 3;
	}
}
